--- a/src/templates/macros/SavedQueriesMacro.vm
+++ b/src/templates/macros/SavedQueriesMacro.vm
@@ -8,10 +8,10 @@
     <option>query one</option>
     <option>query two</option>
    </select> 
-   <input type="submit" name="query" value="Go" class="bttn" />
+   <input type="submit" name="query" value="Go" />
    &nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
    <input type="text" size="15" name="" />
-   <input type="submit" name="query" value="Query" class="bttn" />
+   <input type="submit" name="query" value="Query" />
    &nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
    <a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
   </td>   
