if not using a template, use regular attribute select box.

--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -85,7 +85,11 @@ $page.setTitle("Enter Issue")
     #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
           #userSelectBox ($attVal "")
     #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
+        #if ($templateId)
           #templateAttrValueLeafSelect ($attVal $templAttVal $field "")
+        #else
+          #attrValueLeafSelect ($attVal $field "")
+        #end
     #else
 
 #set ($currentValue = "")
