--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -1,3 +1,4 @@
+$page.setTitle("Issue Template")
         
 #set ($action = $link.setPage("SaveTemplate.vm").setAction("TemplateList").addPathInfo("nextTemplate", "TemplateList.vm"))
 #set ($module = $scarabR.CurrentModule)
@@ -12,63 +13,49 @@
 #set ($templateInfo = $scarabR.IssueTemplateInfo)
 #set ($templateGroup = $intake.IssueTemplateInfo.mapTo($templateInfo)) 
 #set ($issueGroup = $intake.Issue.mapTo($issue)) 
+
+<div class="app" id="saveTemplate">
+
 <form method="post" action="$action" >
-#if ($issueId) <input type="hidden" name="issue_id" value="$issueId"> #end
+#if ($issueId) <input type="hidden" name="issue_id" value="$issueId" /> #end
 
-
-<h3>Save Template</h3>
+<h3>$page.Title</h3>
 <div class="axial">
     <table border="0" cellspacing="2" cellpadding="3">
        <tr>
-            <th>template name</th>
+            <th>Template Name</th>
             <td>
              #fieldErrorMsg($templateGroup.Name "")
-            <input type="text" size="25" value="$!templateGroup.Name" name="$templateGroup.Name.Key"/></td>
+            <input type="text" size="25" value="$!templateGroup.Name" name="$templateGroup.Name.Key"/>
+            </td>
        </tr>
-            
        <tr>
-            <th>template descr</th>
-            <td><textarea rows="4" cols="40" name="$templateGroup.Description.Key">$!templateGroup.Description</textarea></td>
+            <th>Template Desc</th>
+            <td>
+            <textarea rows="4" cols="40" name="$templateGroup.Description.Key">$!templateGroup.Description</textarea>
+            </td>
        </tr>
-            
        <tr>
          <th width="120">Availability</th>
-
-         <td>#templateTypeSelectBox ($issue)
-         </td>
-        
+         <td>#templateTypeSelectBox ($issue)</td>
        </tr>
-
        <tr>
-         <th width="120">location</th>
-         <td>current project '$module.Name'</td>
-         <input type = "hidden" name="$issueGroup.ModuleId.Key" value = "$module.ModuleId">
+         <th width="120">Current Module</th>
+         <td>$module.Name</td>
+         <input type="hidden" name="$issueGroup.ModuleId.Key" value="$module.ModuleId" />
        </tr>
 
 #if ($issueId)
        <tr>
-          <th>template author</th>
+          <th>Template Author</th>
              #set ($createdUser = $issue.CreatedBy)
           <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
        </tr>
 #end
    </table>
 </div>
-                
 
-<h3>Completed Attributes in "Enter Issue" template</h3>
-
-<div class="tabs">
-        <table cellpadding="3" cellspacing="0" border="0">
-        <tr>
-        <th>1: Summary info</th>
-        <td>2: Duplicate check</td>
-        <td>3: <a href="#" title="view verbose information">Verbose info</a></td>
-        </tr>
-        </table>
-</div>
-
-<h3>Input your issue</h3>
+<h3>Template Attributes</h3>
 
 <div class="axial">
         <table cellspacing="2" cellpadding="3" border="0">
@@ -88,32 +75,26 @@
      #elseif ($attVal.Attribute.AttributeType.Name == "string" )
         #set ( $field = "Value" )
      #end
-     #if ( $attVal.isRequired() )
+#*     #if ( $attVal.isRequired() )
         *
      #end
+*#
      $attVal.Attribute.Name</th>
     <td>
     #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
-
           #userSelectBox ($attVal "")
-
-    #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
- 
+    #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" ) 
          #attrValueLeafSelect ($attVal $field "")
-
     #else
         #attrValueErrorMsg( $attVal "Value" )
 
-        #if ($attVal.Attribute.AttributeType.Name == "long-string" )        
-
+        #if ($attVal.Attribute.AttributeType.Name == "long-string" )
             <textarea name= "$attrInput.Value.Key" class="text" cols="40"
                rows="4">$!attrInput.Value</textarea>
         #else
-
            <input name= "$attrInput.Value.Key"
                 value="$!attrInput.Value" size="45" type="text" class="text" />
         #end
-
     #end
     </td>
    </tr>
@@ -122,7 +103,13 @@
 
 </div>
 
+<p class="functnbar">
+<input type="submit" value="save details" name="eventSubmit_doSubmit" />&#160;
+<input type="submit" value="cancel" name="eventSubmit_doCancel"  />&#160;
+<input type="submit" value="clear form" />
+</p>
 
-<p class="functnbar"><input type="submit" value="save details" name="eventSubmit_doSubmit" />&#160;<input type="submit" value="cancel" name="eventSubmit_doCancel"  />&#160;<input type="submit" value="clear form" /></p> 
 $intake.declareGroups()
 </form>
+
+</div>
